# dom_extension

./: .gitignore  CLAUDE.md  JOURNAL.md  README.md  hello.py  pyproject.toml
.github/: copilot-instructions.md
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js  tools.js
