[project]
name = "dom-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20240930",
    "requests>=2.32.4",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "tts>=0.22.0",
]

[tool.uv.workspace]
members = ["dom_agent"]
